Changed to paged retrieval of large BMs